Fix runoff text in Firefox
The descriptive text was running off the right hand side of
the page -- half the text was not visible. It seems that Firefox
does not handle width and max-width within elements in a table
the same way as Safari or Chrome. Change were made to the CSS to
give a width in terms of pixels to the content div within the table.
In addtion, some other changes were made to the layout.

--- a/css/1968.css
+++ b/css/1968.css
@@ -559,5 +559,32 @@ p.copyright-footer a {
   width: 100%;
 }
 
+.layout-file-text .exhibit-text.left {
+  float: right;
+  width: 48%;
+}
+
+.layout-file-text .exhibit-items.left {
+  float: left;
+  width: 48%;
+  max-width: 48%;
+  margin-bottom: 2%;
+  margin-top: 2%;
+}
+
+.exhibit-block.layout-file-text {
+  margin-bottom: 0px;
+}
+
+.exhibit-item-caption {
+  margin-top: 1.2em;
+}
+
 /* fcd1, Jan 2015: */
 /* END of Changes for move to Omeka 2.2.2 (and ExhibitBuilder 3.1.3) */
+
+/* fcd1, 04/14/15: Firefox misbehaving (tables and content with width: 100%) */
+/* so give specific values for width */
+.layoutTable td.content {
+  max-width: 711px;
+}
